fix(): NPE when rules are null